k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
        - name: rails-container
          image: itssam509/rails-app:latest  # Correct image reference
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-volume
              mountPath: /myapp
      volumes:
        - name: app-volume
          emptyDir: {}
