k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: myapp
